syntax = "proto3";
package goshare;

option go_package = "github.com/mineralres/goshare/pkg/pb/goshare";

// 投机套保标志
enum HedgeType {
  // 投机
  SPECULATION = 0;
  // 套利
  ARBITRAGE = 1;
  // 套保
  HEDGE = 2;
  // 投机2(特别标志)
  SPECULATION2 = 3;
}

enum OrderStatus {
  // 完全成交
  DONE = 0;
  // 部分成交还在队列中
  PENDING_WITH_PARTIAL_DONE = 1;
  // 部分成交且已撤单
  CANCELED_WITH_PARTIAL_DONE = 2;
  // 队列中
  PENDING = 3;
  // 已经撤单
  CANCELED = 4;
  // 未知
  UNKOWN = 5;
}

enum OrderPriceType {
  // 限价
  LIMIT_PRICE = 0;
  // 市价
  MARKET_PRICE = 1;
  // 最优价
  BEST_PRICE = 2;
  // 最新价
  LAST_PRICE = 3;
}

enum OffsetFlag {
  // 开仓
  OPEN = 0;
  // 平仓
  CLOSE = 1;
  // 强平
  FORCE_CLOSE = 2;
  // 平今
  CLOSE_TODAY = 3;
  // 平昨
  CLOSE_YESTERDAY = 4;
}

// 报单方向
enum DirectionType {
  LONG  = 0;
  SHORT = 1;
}

// 强平类型
enum ForceCloseReason {
  // 资金不足
  NOT_ENOUGH_MARGIN = 0;
  // 客户超仓
  client_over_position_limit = 1;
  // 会员超仓
  broker_over_poisition_limit = 2;
  // 违规
  violation = 3;
  // 其它
  other = 4;
  // 自然人临近交割
  person_deliver = 5;
}

// 报单来源
enum OrderSourceType {
  // 客户
  CLIENT = 0;
  // 管理员
  ADMINISTRATOR = 1;
  // 风控
  RISK_SRV = 2;
  // 手机端
  MOBILE = 3;
  // PC端
  PC = 4;
  // 结算衍生
  SETTLEMENT_DERIVED = 5;
  // 套利单衍生
  COMBINATION_DERIVED = 6;
  // 多路径平仓衍生
  MULTI_ROUTE_CLOSE_DERIVED = 7;
  // 分红送股
  PLACEMENT_SHARE = 8;
  // 回购操作
  REPURCHASE = 9;
  // CTP上传
  CTP_UPLOAD = 10;
}

// 委托
message Order {
  string user_id                = 1;  // 用户
  string ta_id                  = 2;  // taid
  string bu_id                  = 3;  // buid
  string exchange               = 4;  // 交易所
  string symbol                 = 5;  // 合约
  string product                = 6;  // 品种
  string order_ref              = 7;  // ID
  int32  direction              = 8;  // 方向
  int32  offset                 = 9;  // 开平
  double price                  = 10; // 限价
  int32  volume                 = 11; // 数量
  int32  volume_traded          = 12; // 成交数量
  int32  volume_canceled        = 13; // 撤单数量
  int32  status                 = 14; // 状态
  int32  price_type             = 15; // 价格类型
  double frozen_commission      = 16; // 冻结手续费
  int64  send_order_time        = 17; // 发送时间（成交时间)
  int32  send_order_trading_day = 18; // 交易日
  string status_msg             = 19; // 备注
  int32  force_close_type       = 20; // 强平类型
  int32  order_source_type      = 21; // 来源
  int32  hedge_type             = 22; // 投机套保类型
  string user_product_info      = 23; // 产品标识
  string exchange_order_id      = 24; // 交易所ID
  int32  time_condition_type    = 25; // 有效期类型
  bool   is_pending      = 26; // 是否继续变化,优化手续费计算
  double commission      = 27; // 委托收费
  string product_type    = 28; // 交易品种类型
  double traded_amount   = 29; // 成交金额
  int32  multiple        = 30; // 合约乘数
  double price_tick      = 31; // 最小变动价位
  double last_price      = 32; // 最新价
  double frozen_margin   = 33; // 冻结合计
  string symbol_name     = 34; // 合约名称
  string reason          = 35; // 发送原因
  double stamp_tax       = 36; // 印花税
  double transfer_fee    = 37; // 过户费
  string user_name       = 38; // 用户名
  string ip              = 39; // 客户端ip
  string mac             = 40; // 客户端mac
  string branch          = 41; // 部门
  string branch_name     = 42; // 部门名称
  int32  bu_type         = 43; // 单元类型
  string debug           = 44; // 调试信息
  int32  session_id      = 45; // sessionid
  int64  client_tag      = 46; // client tag
  int32  front_id        = 47; // front id
  int32  request_id      = 48; // request id
  int32  local_order_seq = 49; // local order seq
}

message OrderList { repeated Order list = 1; }

message JointOrder {
  Order local_order    = 1;
  Order exchange_order = 2;
}
